
=== ppracer 0.5 alpha2 ===

2005-10-17  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/images/readPNG.cpp
	fixed memleak

2005-10-16  Volker Stroebel <volker@planetpenguin.de>
	* src/racing.cpp
	fixed braking in multiplayer mode
	fixed updating time in multiplayer mode

	* data/models/tux2/model.nut
	changed material names
	
	* src/gameover.cpp
	removed unnedded drawing of hud
	
	* src/view.cpp src/racingmode.cpp
	fixed paused and gameover views in multiplayer mode

2005-10-13  Volker Stroebel <volker@planetpenguin.de>
	* src/lights.cpp
	fixed registration of light colors

	* data/themes/conditions/common/*.nut
	fixed lighting

2005-10-12  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/base/glextensions.cpp
	fixed compilation on g++-2.95

2005-10-10  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/base/os.* src/main.cpp src/stuff.cpp
	implemented handling of home and user directory in ppogl
	
	* src/course_load.cpp data/init.nut
	added support courses in the users home dir
	
	* src/ppogl/base/glextensions.*
	added glextension system
	
	* src/ppogl/ui/scale.*
	added changed signal
	
	* src/audioconfig.* src/ppogl/audio/audiomgr.cpp
	added realtime change of music volume in audio configuration

2005-10-09  Volker Stroebel <volker@planetpenguin.de>
	* (*)
	added background image for fps counter
	improved hud to support backgrounds for fps and course percentage
	fixed bug in percentagebar

	* src/squirrel/* src/sqstdlib/*
	updated squirrel to 2.0.5

2005-10-08  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/audio/audiomgr.* src/paused.cpp
	added AudioMgr::pauseMusic()
	pause music in PAUSED mode
	
	* src/ppogl/audio/audiomgr.cpp
	added fallback if Mix_OpenAudio fails
	
	* src/winsys.cpp
	added fallbacks if SDL_SetVideoMode fails

2005-10-07  Volker Stroebel <volker@planetpenguin.de>
	* src/course_quad.*
	removed files
	
	* src/*
	several code cleanups and fixes

2005-10-05  Volker Stroebel <volker@planetpenguin.de>